Fixed styling on tablets for the about page

--- a/src/App.css
+++ b/src/App.css
@@ -43,4 +43,5 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: 'Montserrat', sans-serif;
 }
